# AutoWSGR

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  renovate.json  requirements.txt  setup.py  sig.py  usersettings.yaml
.agents/skills/emulator-debug/: SKILL.md
.agents/skills/generic-issue-log-analysis/: SKILL.md
.assets/: spelling_wordlist.txt
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  enhancement_suggestion.yml
.github/skills/release-backend/: SKILL.md
.github/workflows/: ai-code-review.yml  ai-issue-analysis.yml  lint.yml  lunar.yml  pytest.yml  python-publish.yml  release.yml  sync-upstream.yml
autowsgr/: __init__.py  configs.py  types.py  user_config.py
autowsgr/combat/: README.md  __init__.py  actions.py  engine.py  handlers.py  history.py  node_tracker.py  plan.py  recognition.py  recognizer.py  rules.py  state.py
autowsgr/constants/: __init__.py  shipnames.py  ui.py
autowsgr/context/: README.md  __init__.py  build.py  equipment.py  expedition.py  fleet.py  game_context.py  resources.py  ship.py
autowsgr/data/: missions.yaml
autowsgr/data/ocr/: ship_name.yaml
autowsgr/emulator/: __init__.py  controller.py  detector.py
autowsgr/emulator/controller/: __init__.py  adb.py  protocol.py  scrcpy.py
autowsgr/emulator/os_control/: __init__.py  base.py  linux.py  macos.py  windows.py
autowsgr/fight/: battle.py  common.py  decisive_battle.py  exercise.py  normal_fight.py
autowsgr/fight/event/: event_2024_1219.py  event_2025_0123.py
autowsgr/game/: game_operation.py  get_game_info.py
autowsgr/image_resources/: __init__.py  _lazy.py  combat.py  keys.py  ops.py
autowsgr/infra/: __init__.py  config.py  exceptions.py  file_utils.py  logger.py
autowsgr/notification/: miao_alert.py  miao_alert.yaml  miaotixing.py
autowsgr/ops/: README.md  __init__.py  build.py  campaign.py  cook.py  destroy.py  event_fight.py  exercise.py  expedition.py  navigate.py  normal_fight.py  repair.py  retry_plan.md  reward.py  startup.py
autowsgr/ops/decisive/: __init__.py  base.py  chapter.py  config.py  controller.py  handlers.py  logic.py  state.py
autowsgr/port/: common.py  ship.py  task_runner.py
autowsgr/scheduler/: __init__.py  launcher.py  scheduler.py
autowsgr/scripts/: daily_api.py  main.py
autowsgr/server/: __init__.py  main.py  schemas.py  serializers.py  task_manager.py  ws_manager.py
autowsgr/server/routes/: __init__.py  game.py  health.py  ops.py  system.py  task.py
autowsgr/timer/: timer.py
autowsgr/timer/backends/: ocr_backend.py
autowsgr/timer/controllers/: android_controller.py
autowsgr/ui/: README.md  __init__.py  backyard_page.py  bath_page.py  build_page.py  canteen_page.py  choose_ship_page.py  friend_page.py  intensify_page.py  main_page.py  mission_page.py  navigation.py  overlay.py  page.py  sidebar_page.py  start_screen_page.py  tabbed_page.py  utils.py
autowsgr/ui/bath_page/: __init__.py  page.py  recognition.py  signatures.py
autowsgr/ui/battle/: __init__.py  base.py  blood.py  constants.py  detection.py  fleet_change.py  preparation.py  repair.py  supply.py
autowsgr/ui/decisive/: __init__.py  battle_page.py  fleet_ocr.py  map_controller.py  overlay.py  preparation.py
autowsgr/ui/event/: __init__.py  event_page.py
autowsgr/ui/main_page/: __init__.py  constants.py  controller.py  event_nav.py  overlays.py
autowsgr/ui/map/: __init__.py  base.py  data.py  page.py
autowsgr/ui/mission_page/: __init__.py  data.py  page.py  recognition.py
autowsgr/ui/utils/: __init__.py  navigation.py  ship_list.py
autowsgr/utils/: io.py
autowsgr/vision/: __init__.py  api_dll.py  image_matcher.py  image_template.py  matcher.py  ocr.py  pixel.py  roi.py
autowsgr_legacy/: types.py
autowsgr_legacy/fight/: common.py  decisive_battle.py  normal_fight.py
autowsgr_legacy/fight/event/: event_2023_0927.py  event_2024_0206.py
autowsgr_legacy/game/: game_operation.py  get_game_info.py
autowsgr_legacy/port/: ship.py  task_runner.py
autowsgr_legacy/timer/: timer.py
autowsgr_legacy/timer/controllers/: android_controller.py  os_controller.py
docs/: ai-issue-analysis-bot.md  decisive_step_and_rotation.md  image_template_usage.md  migration_scrcpy.md  mission_recognition.md  spelling_wordlist.txt  ui_module_api.md  v2_architecture.md
docs/LLM-REF/: mission_recognition.md  test_pkg.md  ui_architecture.md
docs/architecture/: README.md  combat-engine.md  context-and-config.md  emulator.md  infra.md  ops.md  scheduler-and-server.md  ui.md  vision.md
docs/developer/: test_pkg.md
docs/todo/: enhancement.md
docs/usage/: usage_combat.md  usage_daily_ops.md  usage_decisive.md  usage_quickstart.md
documentation/: 使用说明.md
examples/: campaign.py  change_fleet.py  decisive.py  decisive_task.py  event.py  event_fight.py  exercise.py  expedition.py  fight_task.py  fight_task_example.yaml  more_custom_functions.py  normal_fight.py  ship_names.yaml  user_settings.yaml  usersettings.full.yaml  usersettings.minimal.yaml  week.py
examples/plans/normal_fight/: 5-2炸鱼.yaml  8-2BJ.yaml
test_pkg/: run_tests.py
test_pkg/ui/: tests.py
testing/: conftest.py
testing/combat/: test_combat.py
testing/emulator/: test_controller.py  test_os_control.py
testing/infra/: test_config.py  test_exceptions.py  test_file_utils.py
testing/ops/: _framework.py  build.py  campaign.py  cook.py  decisive_battle.py  destroy.py  event_fight.py  exercise.py  expedition.py  normal_fight.py  repair.py  reward.py  scheduler.py  startup.py
testing/ui/: _framework.py  run_all_e2e.ps1  run_all_e2e.py
testing/ui/backyard_page/: e2e.py
testing/ui/bath_page/: e2e.py
testing/ui/battle_preparation/: e2e.py  test_unit.py
testing/vision/: _helpers.py  test_image_checker.py  test_image_template.py  test_matcher.py  test_ocr.py  test_roi.py
tools/: LLM.md  VisualIdentity.md  benchmark_emulator.py  crawler.py  debug_screenshot.py  map_recognize.py  pixel_marker.py  ship_name.py  update_shipnames.py
(+67 files in other folders)
