[project]
name = "autowsgr"
dynamic = ["version"]
description = "Auto Warship Girls Framework."
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Environment :: GPU :: NVIDIA CUDA",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing",
]
urls.Documentation = "https://docs-autowsgr.notion.site"
urls.Repository = "https://github.com/OpenWSGR/AutoWSGR"
dependencies = [
    "rich",
    "opencv-python-headless",
    "loguru",
    "keyboard",
    "easyocr>=1.7.1",
    "adbutils>=2.0,<3.0",
    "autowsgr_native>=0.2.0",
    "av>=12.0",
    "pydantic>=2.0,<3.0",
    # HTTP Server
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "websockets>=11.0",
]

[dependency-groups]
dev = [
    "pre-commit",
    "pytest>=8.0",
    "pytest-cov",
    "pytest-xdist",
    "requests>=2.32.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "autowsgr/__init__.py"

[tool.codespell]
ignore-words = "docs/spelling_wordlist.txt"

[tool.pytest.ini_options]
testpaths = ["testing"]

[tool.ruff]
target-version = "py312"
line-length = 100
output-format = "full"
src = ["autowsgr", "testing", "examples", "tools"]

[tool.ruff.format]
quote-style = "single"
docstring-code-format = false
skip-magic-trailing-comma = false

[tool.ruff.lint]
# Sort according to https://docs.astral.sh/ruff/rules
select = [
    "FAST",    # FastAPI
    "YTT",     # flake8-2020
    "ANN",     # flake8-annotations
    "ASYNC",   # flake8-async
    "S",       # flake8-bandit
    "BLE",     # flake8-blind-except
    "B",       # flake8-bugbear
    "COM",     # flake8-commas
    "C4",      # flake8-comprehensions
    "DTZ",     # flake8-datetimez
    "T10",     # flake8-debugger
    "EM",      # flake8-errmsg
    "EXE",     # flake8-executable
    "FA",      # flake8-future-annotations
    "ISC",     # flake8-implicit-str-concat
    "LOG",     # flake8-logging
    "INP",     # flake8-no-pep420
    "PIE",     # flake8-pie
    "T20",     # flake8-print
    "PYI",     # flake8-pyi
    "PT",      # flake8-pytest-style
    "Q",       # flake8-quotes
    "RSE",     # flake8-raise
    "SIM",     # flake8-simplify
    "TID",     # flake8-tidy-imports
    "TC",      # flake8-type-checking
    "ARG",     # flake8-unused-arguments
    "I",       # isort
    "C90",     # mccabe complexity
    "NPY",     # NumPy-specific rules
    "PD",      # pandas-vet
    "N",       # pep8-naming
    "PERF",    # perflint
    "E", "W",  # pycodestyle
    "F",       # pyflakes
    "PGH",     # pygrep-hooks
    "PL",      # Pylint
    "UP",      # pyupgrade
    "FURB",    # refurb
    "RUF",     # ruff
    "TRY",     # tryceratops
]
preview = true
explicit-preview-rules = true
ignore = [
    "ANN002",  # missing-type-args
    "ANN003",  # missing-type-kwargs
    "ANN204",  # missing-return-type-special-method
    "ANN401",  # any-type
    "B027",    # empty-method-without-abstract-decorator
    "B905",    # zip-without-explicit-strict
    "BLE001",  # blind-except
    "C401",    # unnecessary set comprehension
    "C416",    # unnecessary-comprehension
    "COM812",  # missing-trailing-comma
    "EM101",   # raw-string-in-exception
    "EM102",   # f-string-in-exception
    "E501",    # line-too-long
    "N802",    # invalid-function-name
    "PLC0415", # import-outside-top-level
    "PLR2004", # magic value used in comparison
    "PT012",   # pytest-raises-with-multiple-statements
    "PT028",   # pytest-parameter-with-default-argument
    "RUF005",  # collection-literal-concatenation
    "RUF052",  # used-dummy-variable
    "S101",    # assert
    "S105",    # hardcoded-password-string
    "S106",    # hardcoded-password-func-arg
    "S107",    # hardcoded-password-default
    "S108",    # hardcoded-temp-file
    "S301",    # suspicious-pickle-usage
    "S311",    # suspicious-non-cryptographic-random-usage
    "S324",    # hashlib-insecure-hash-function
    "SIM105",  # suppressible-exception
    "SIM108",  # if-else-block-instead-of-if-exp
    "TID252",  # relative-imports
    "TRY003",  # raise-vanilla-args
    "TRY301",  # raise-within-try
    "TRY400",  # error-instead-of-exception
    "UP047",   # type parameters
    "W505",    # doc-line-too-long
    # TODO: fix and remove below
    "ARG001",  # unused-function-argument (12)
    "ARG005",  # unused-lambda-argument (9)
    "DTZ005",  # call-datetime-now-without-tzinfo (6)
    "PLR0912", # too-many-branches (13)
    "PLR0915", # too-many-statements (4)
    "PLW0108", # unnecessary-lambda (43)
    "PLW0603", # global-statement (9)
    "PLW1510", # subprocess-run-without-check (6)
    "PT011",   # pytest-raises-too-broad (4)
    "PT018",   # pytest-composite-assertion (12)
    "S110",    # try-except-pass (21)
    "S603",    # subprocess-without-shell-equals-true (16)
    "S607",    # start-process-with-partial-path (8)
    "T201",    # print (9)
]
allowed-confusables = ["，", "。", "：", "？", "！", "、", "（", "）", "；", "“", "”"]
extend-safe-fixes = [
    "C408",     # unnecessary-collection-call
    "E711",     # none-comparison
    "FURB129",  # readlines-in-for
    "PERF102",  # incorrect-dict-iterator
    "PIE810",   # multiple-starts-ends-with
    "SIM102",   # collapsible-if
    "TC001",    # typing-only-first-party-import
    "TC002",    # typing-only-third-party-import
    "TC003",    # typing-only-standard-library-import
    "TC004",    # runtime-import-in-type-checking-block
    "TRY201",   # verbose-raise
    "UP004",    # useless-object-inheritance
    "UP008",    # super-call-with-parameters
    "UP038",    # non-pep604-isinstance
    "UP039",    # unnecessary-class-parentheses
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401",    # unused-import
]
"testing/**" = [
    "T201",    # print
]
"tools/**" = [
    "T201",    # print
]

[tool.ruff.lint.mccabe]
max-complexity = 17

[tool.ruff.lint.pylint]
max-args = 15
max-positional-args = 7
max-statements = 60

[tool.ruff.lint.isort]
known-first-party = ["autowsgr"]
known-local-folder = ["autowsgr", "tools", "examples"]
lines-after-imports = 2

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
suppress-dummy-args = true
suppress-none-returning = true


[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel"]
runtime-evaluated-decorators = ["pydantic.validate_call"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
multiline-quotes = "double"
inline-quotes = "single"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
